discussion/kv_engine/161947/161947_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48399: Move shard calculation from workload.cc to ep_engine.cc

In preparation for a future change in which we will read the shard
count for magma buckets from a file.

Change-Id: I6561513978ca1467f42994be734eff1e46674de1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-21 09:53:39.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-21 12:31:44.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34200/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/workload.h:35:9:
error: use of undeclared identifier "Expects"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34200/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40179/ : FAILURE

Failure of GoogleTest "MagmaKVStoreRollbackTest.Rollback":

<pre>
[ RUN      ] MagmaKVStoreRollbackTest.Rollback
unknown file: error: C++ exception with description "GSL: Precondition failure: "numShards != 0" at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\executor/workload.h:35" thrown in SetUp().
unknown file: error: C++ exception with description "cb::io::rmrf: stat of ep_engine_ep_unit_tests.db/test.251202 failed: The system cannot find the file specified." thrown in TearDown().
[  FAILED  ] MagmaKVStoreRollbackTest.Rollback (2 ms)
MagmaKVStoreRollbackTest.Rollback
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12640/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/workload.h:35:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(numShards != 0);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12640/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/workload.h:35:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12640/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13398/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.BasicTest/nexus_couchdb_magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.BasicTest/nexus_couchdb_magma
[2021-09-21T10:09:57.243Z] unknown file: Failure
[2021-09-21T10:09:57.243Z] C++ exception with description "GSL: Precondition failure: "numShards != 0" at ../kv_engine/executor/workload.h:35" thrown in SetUp().
[2021-09-21T10:09:57.243Z] unknown file: Failure
[2021-09-21T10:09:57.243Z] C++ exception with description "cb::io::rmrf: stat of ep_engine_ep_unit_tests.db/KVStoreParam_KVStoreParamTest_BasicTest_nexus_couchdb_magma failed: No such file or directory" thrown in TearDown().
[2021-09-21T10:09:57.243Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.BasicTest/nexus_couchdb_magma, where GetParam() = "nexus_couchdb_magma" (0 ms)
KVStoreParam/KVStoreParamTest.BasicTest/nexus_couchdb_magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2281/ : FAILURE

Compile error at [2021-09-21T09:59:17.743Z] ../kv_engine/executor/workload.h:35:9:
error: use of undeclared identifier "Expects"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2281/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15014/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.BasicTest/magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.BasicTest/magma
[2021-09-21T10:09:50.548Z] unknown file: Failure
[2021-09-21T10:09:50.548Z] C++ exception with description "GSL: Precondition failure: "numShards != 0" at ../kv_engine/executor/workload.h:35" thrown in SetUp().
[2021-09-21T10:09:50.548Z] unknown file: Failure
[2021-09-21T10:09:50.548Z] C++ exception with description "cb::io::rmrf: stat of ep_engine_ep_unit_tests.db/KVStoreParam_KVStoreParamTest_BasicTest_magma failed: No such file or directory" thrown in TearDown().
[2021-09-21T10:09:50.548Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.BasicTest/magma, where GetParam() = "magma" (6 ms)
KVStoreParam/KVStoreParamTest.BasicTest/magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15014/ )

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x33081) in __interceptor_malloc  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15014/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14508/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.BasicTest/magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.BasicTest/magma
[2021-09-21T10:02:16.765Z] unknown file: Failure
[2021-09-21T10:02:16.765Z] C++ exception with description "GSL: Precondition failure: "numShards != 0" at ../kv_engine/executor/workload.h:35" thrown in SetUp().
[2021-09-21T10:02:16.765Z] unknown file: Failure
[2021-09-21T10:02:16.765Z] C++ exception with description "cb::io::rmrf: stat of ep_engine_ep_unit_tests.db/KVStoreParam_KVStoreParamTest_BasicTest_magma failed: No such file or directory" thrown in TearDown().
[2021-09-21T10:02:16.765Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.BasicTest/magma, where GetParam() = "magma" (0 ms)
KVStoreParam/KVStoreParamTest.BasicTest/magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14508/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14508/ )

Test exceeded the timeout:
[2021-09-21T10:00:50.781Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14508/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2312/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.BasicTest/magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.BasicTest/magma
[2021-09-21T10:12:23.747Z] unknown file: Failure
[2021-09-21T10:12:23.747Z] C++ exception with description "GSL: Precondition failure: "numShards != 0" at ../kv_engine/executor/workload.h:35" thrown in SetUp().
[2021-09-21T10:12:23.747Z] unknown file: Failure
[2021-09-21T10:12:23.747Z] C++ exception with description "cb::io::rmrf: stat of ep_engine_ep_unit_tests.db/KVStoreParam_KVStoreParamTest_BasicTest_magma failed: No such file or directory" thrown in TearDown().
[2021-09-21T10:12:23.747Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.BasicTest/magma, where GetParam() = "magma" (0 ms)
KVStoreParam/KVStoreParamTest.BasicTest/magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2312/ )

Test exceeded the timeout:
[2021-09-21T10:10:39.048Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14255/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.NoAccessTest/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.NoAccessTest/Mcbp
[2021-09-21T10:03:12.815Z] Failed building socket: connect() failed (127.0.0.1 35177): Connection refused
[2021-09-21T10:03:12.815Z] unknown file: Failure
[2021-09-21T10:03:12.815Z] C++ exception with description "Failed to connect to: localhost:35177: Connection refused" thrown in the test body.
[2021-09-21T10:03:12.815Z] [  FAILED  ] TransportProtocols/InterfacesTest.NoAccessTest/Mcbp, where GetParam() = Mcbp (0 ms)
TransportProtocols/InterfacesTest.NoAccessTest/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14255/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14255/ )

Test exceeded the timeout:
[2021-09-21T10:02:12.019Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14255/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22521/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11431/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-09-21 13:57:00.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
